basic template ok

--- a/app.yaml
+++ b/app.yaml
@@ -5,9 +5,15 @@ api_version: 1
 threadsafe: yes
 
 handlers:
+- url: /
+  script: main.app
+
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+
+- url: /stylesheets
+  static_dir: stylesheets
 
 - url: .*
   script: main.app
@@ -15,3 +21,5 @@ handlers:
 libraries:
 - name: webapp2
   version: "2.5.2"
+- name: jinja2
+  version: "2.6"  
